@@ -100,6 +100,7 @@ static GameDefs g = {
     0, // CITY_MARKET_NORMAL_AMT
     0, // CITY_MARKET_ADVANCED_AMT
     0, // CITY_MARKET_TRADE_AMT
+    0, // CITY_MARKET_MAGIC_AMT
 	0, // MORE_PROFITABLE_TRADE_GOODS
 
 	50,	// BASE_MAN_COST
