@@ -2550,43 +2550,43 @@ static ObjectType ot[] =
 	 0, 0, 0,
 	 -1, -1},
 	{"Longboat",
-	 ObjectType::NEVERDECAY | ObjectType::CANENTER,
+	 ObjectType::NEVERDECAY | ObjectType::CANENTER | ObjectType::CANMODIFY,
 	 0,200,5,0,
 	 I_WOOD,25,S_SHIPBUILDING,1,
 	 0,0,0,
 	 -1,-1},
 	{"Clipper",
-	 ObjectType::NEVERDECAY | ObjectType::CANENTER,
+	 ObjectType::NEVERDECAY | ObjectType::CANENTER | ObjectType::CANMODIFY,
 	 0,800,10,0,
 	 I_WOOD,50,S_SHIPBUILDING,1,
 	 0,0,0,
 	 -1,-1},
 	{"Galleon",
-	 ObjectType::NEVERDECAY | ObjectType::CANENTER,
+	 ObjectType::NEVERDECAY | ObjectType::CANENTER | ObjectType::CANMODIFY,
 	 0,1800,15,0,
 	 I_WOOD,75,S_SHIPBUILDING,1,
 	 0,0,0,
 	 -1,-1},
 	{"Tower",
-	 ObjectType::CANENTER,
+	 ObjectType::CANENTER | ObjectType::CANMODIFY,
 	 10,0,0,10,
 	 I_STONE,10,S_BUILDING,1,
 	 5,1,2,
 	 -1,-1},
 	{"Fort",
-	 ObjectType::CANENTER,
+	 ObjectType::CANENTER | ObjectType::CANMODIFY,
 	 50,0,0,20,
 	 I_STONE,40,S_BUILDING,1,
 	 20,4,3,
 	 -1,-1},
 	{"Castle",
-	 ObjectType::CANENTER,
+	 ObjectType::CANENTER | ObjectType::CANMODIFY,
 	 250,0,0,50,
 	 I_STONE,160,S_BUILDING,1,
 	 80,6,3,
 	 -1,-1},
 	{"Citadel",
-	 ObjectType::CANENTER,
+	 ObjectType::CANENTER | ObjectType::CANMODIFY,
 	 1250,0,0,100,
 	 I_STONE,640,S_BUILDING,1,
 	 400,10,4,
@@ -2628,55 +2628,56 @@ static ObjectType ot[] =
 	 0,0,0,
 	 I_SKELETON,-1},
 	{"Balloon",
-	 ObjectType::NEVERDECAY | ObjectType::CANENTER,
+	 ObjectType::NEVERDECAY | ObjectType::CANENTER | ObjectType::CANMODIFY,
 	 0,800,10,0,
 	 I_FLOATER,50,S_SHIPBUILDING,5,
 	 0,0,0,
 	 -1,-1},
 	{"Armored Galleon",
-	 ObjectType::NEVERDECAY | ObjectType::CANENTER,
+	 ObjectType::NEVERDECAY | ObjectType::CANENTER | ObjectType::CANMODIFY,
 	 200,1800,15,15,
 	 I_IRONWOOD,75,S_SHIPBUILDING,3,
 	 0,0,0,
 	 -1,-1},
 	{"Magical Fortress",
-	 ObjectType::NEVERDECAY | ObjectType::CANENTER | ObjectType::NOEARTHQUAKE,
+	 ObjectType::NEVERDECAY | ObjectType::CANENTER | ObjectType::NOEARTHQUAKE |
+		 ObjectType::CANMODIFY,
 	 250,0,0,60,
 	 I_ROOTSTONE,160,S_BUILDING,3,
 	 0,0,0,
 	 -1,-1},
 	{"Mine",
-	 ObjectType::CANENTER,
+	 ObjectType::CANENTER | ObjectType::CANMODIFY,
 	 0,0,0,0,
 	 I_WOOD_OR_STONE,10,S_MINING,3,
 	 5,1,2,
 	 -1,I_IRON},
 	{"Farm",
-	 ObjectType::CANENTER,
+	 ObjectType::CANENTER | ObjectType::CANMODIFY,
 	 0,0,0,0,
 	 I_WOOD_OR_STONE,10,S_FARMING,3,
 	 5,1,2,
 	 -1,I_GRAIN},
 	{"Ranch",
-	 ObjectType::CANENTER,
+	 ObjectType::CANENTER | ObjectType::CANMODIFY,
 	 0,0,0,0,
 	 I_WOOD_OR_STONE,10,S_RANCHING,3,
 	 5,1,2,
 	 -1,I_LIVESTOCK},
 	{"Timber Yard",
-	 ObjectType::CANENTER,
+	 ObjectType::CANENTER | ObjectType::CANMODIFY,
 	 0,0,0,0,
 	 I_WOOD_OR_STONE,10,S_LUMBERJACK,3,
 	 5,1,2,
 	 -1,I_WOOD},
 	{"Inn",
-	 ObjectType::CANENTER,
+	 ObjectType::CANENTER | ObjectType::CANMODIFY,
 	 0,0,0,0,
 	 I_WOOD_OR_STONE,10,S_BUILDING,3,
 	 5,1,2,
 	 -1,I_SILVER},
 	{"Quarry",
-	 ObjectType::CANENTER,
+	 ObjectType::CANENTER | ObjectType::CANMODIFY,
 	 0,0,0,0,
 	 I_WOOD_OR_STONE,10,S_QUARRYING,3,
 	 5,1,2,
@@ -2709,67 +2710,67 @@ static ObjectType ot[] =
 	 I_ELEMENTAL,-1},
 	// AS
 	{"Road N",
-	 ObjectType::DISABLED | ObjectType::CANENTER,
+	 ObjectType::DISABLED | ObjectType::CANENTER | ObjectType::CANMODIFY,
 	 0,0,0,0,
 	 I_STONE,75,S_BUILDING,3,
 	 24,6,4,
 	 -1,-1},
 	{"Road NW",
-	 ObjectType::DISABLED | ObjectType::CANENTER,
+	 ObjectType::DISABLED | ObjectType::CANENTER | ObjectType::CANMODIFY,
 	 0,0,0,0,
 	 I_STONE,75,S_BUILDING,3,
 	 24,6,4,
 	 -1,-1},
 	{"Road NE",
-	 ObjectType::DISABLED | ObjectType::CANENTER,
+	 ObjectType::DISABLED | ObjectType::CANENTER | ObjectType::CANMODIFY,
 	 0,0,0,0,
 	 I_STONE,75,S_BUILDING,3,
 	 24,6,4,
 	 -1,-1},
 	{"Road SW",
-	 ObjectType::DISABLED | ObjectType::CANENTER,
+	 ObjectType::DISABLED | ObjectType::CANENTER | ObjectType::CANMODIFY,
 	 0,0,0,0,
 	 I_STONE,75,S_BUILDING,3,
 	 24,6,4,
 	 -1,-1},
 	{"Road SE",
-	 ObjectType::DISABLED | ObjectType::CANENTER,
+	 ObjectType::DISABLED | ObjectType::CANENTER | ObjectType::CANMODIFY,
 	 0,0,0,0,
 	 I_STONE,75,S_BUILDING,3,
 	 24,6,4,
 	 -1,-1},
 	{"Road S",
-	 ObjectType::DISABLED | ObjectType::CANENTER,
+	 ObjectType::DISABLED | ObjectType::CANENTER | ObjectType::CANMODIFY,
 	 0,0,0,0,
 	 I_STONE,75,S_BUILDING,3,
 	 24,6,4,
 	 -1,-1},
 	{"Temple",
-	 ObjectType::DISABLED | ObjectType::CANENTER,
+	 ObjectType::DISABLED | ObjectType::CANENTER | ObjectType::CANMODIFY,
 	 0,0,0,0,
 	 I_STONE,10,S_BUILDING,3,
 	 5,1,2,
 	 -1,I_HERBS},
 	{"Mystic Quarry",
-	 ObjectType::DISABLED | ObjectType::CANENTER,
+	 ObjectType::DISABLED | ObjectType::CANENTER | ObjectType::CANMODIFY,
 	 0,0,0,0,
 	 I_ROOTSTONE,20,S_QUARRYING,3,
 	 10,2,2,
 	 -1,I_ROOTSTONE},
 	{"Arcane Mine",
-	 ObjectType::DISABLED | ObjectType::CANENTER,
+	 ObjectType::DISABLED | ObjectType::CANENTER | ObjectType::CANMODIFY,
 	 0,0,0,0,
 	 I_MITHRIL,20,S_MINING,3,
 	 10,2,2,
 	 -1,I_MITHRIL},
 	{"Forest Preserve",
-	 ObjectType::DISABLED | ObjectType::CANENTER,
+	 ObjectType::DISABLED | ObjectType::CANENTER | ObjectType::CANMODIFY,
 	 0,0,0,0,
 	 I_IRONWOOD,20,S_LUMBERJACK,3,
 	 10,2,2,
 	 -1,I_IRONWOOD},
 	{"Sacred Grove",
-	 ObjectType::DISABLED | ObjectType::CANENTER,
+	 ObjectType::DISABLED | ObjectType::CANENTER | ObjectType::CANMODIFY,
 	 0,0,0,0,
 	 I_YEW,30,S_LUMBERJACK,5,
 	 15,2,2,
@@ -2784,38 +2785,40 @@ static ObjectType ot[] =
 	 I_BALROG,-1},
 	// Added for citadel replacement in conquest
 	{"Palace",
-	 ObjectType::CANENTER | ObjectType::NEVERDECAY,
+	 ObjectType::CANENTER | ObjectType::NEVERDECAY | ObjectType::CANMODIFY,
 	 1250,0,0,200,
 	 -1,0,-1,0,
 	 0,0,0,
 	 -1,-1},
 	// Added for Ceran
 	{"Dragon Cliffs",
-	 ObjectType::DISABLED | ObjectType::CANENTER,
+	 ObjectType::DISABLED | ObjectType::CANENTER | ObjectType::CANMODIFY,
 	 1,0,0,0,
 	 I_ROOTSTONE,100,S_DRAGON_LORE,3,
 	 50,5,2,
 	 I_DRAGON,-1},
 	{"Magical Tower",
-	 ObjectType::DISABLED | ObjectType::CANENTER | ObjectType::NOEARTHQUAKE,
+	 ObjectType::DISABLED | ObjectType::CANENTER | ObjectType::NOEARTHQUAKE |
+		 ObjectType::CANMODIFY,
 	 10,0,0,10,
 	 I_ROOTSTONE,10,S_BUILDING,2,
 	 5,1,2,
 	 -1,-1},
 	{"War Galleon",
-	 ObjectType::DISABLED | ObjectType::NEVERDECAY | ObjectType::CANENTER,
+	 ObjectType::DISABLED | ObjectType::NEVERDECAY | ObjectType::CANENTER |
+		 ObjectType::CANMODIFY,
 	 350,2500,15,30,
 	 I_YEW,75,S_SHIPBUILDING,5,
 	 0,0,0,
 	 -1,-1},
 	{"Hermits hut",
-	 ObjectType::DISABLED | ObjectType::CANENTER,
+	 ObjectType::DISABLED | ObjectType::CANENTER | ObjectType::CANMODIFY,
 	 1,0,0,1,
 	 I_IRONWOOD,3,S_BUILDING,3,
 	 1,1,1,
 	 -1,-1},
 	{"Stockade",
-	 ObjectType::DISABLED | ObjectType::CANENTER,
+	 ObjectType::DISABLED | ObjectType::CANENTER | ObjectType::CANMODIFY,
 	 50,0,0,5,
 	 I_WOOD,60,S_BUILDING,1,
 	 30,3,2,
@@ -2845,7 +2848,8 @@ static ObjectType ot[] =
 	 0,0,0,
 	 I_SKELETON,I_HERBS},
 	{"Hexagonal Tower",
-	 ObjectType::DISABLED | ObjectType::CANENTER | ObjectType::NEVERDECAY,
+	 ObjectType::DISABLED | ObjectType::CANENTER | ObjectType::NEVERDECAY |
+		 ObjectType::CANMODIFY,
 	 7,0,0,2,
 	 -1,0,-1,0,
 	 0,0,0,
@@ -2888,55 +2892,55 @@ static ObjectType ot[] =
 	 0,0,0,
 	 I_HYDRA,-1},
 	{"Trapping Hut",
-	 ObjectType::DISABLED | ObjectType::CANENTER,
+	 ObjectType::DISABLED | ObjectType::CANENTER | ObjectType::CANMODIFY,
 	 0,0,0,0,
 	 I_WOOD_OR_STONE,10,S_HUNTING,3,
 	 10,2,2,
 	 -1,I_FUR},
 	{"Stables",
-	 ObjectType::DISABLED | ObjectType::CANENTER,
+	 ObjectType::DISABLED | ObjectType::CANENTER | ObjectType::CANMODIFY,
 	 0,0,0,0,
 	 I_WOOD_OR_STONE,10,S_HORSETRAINING,3,
 	 10,2,2,
 	 -1,I_HORSE},
 	{"Mythic Stables",
-	 ObjectType::DISABLED | ObjectType::CANENTER,
+	 ObjectType::DISABLED | ObjectType::CANENTER | ObjectType::CANMODIFY,
 	 0,0,0,0,
 	 I_IRONWOOD,10,S_HORSETRAINING,5,
 	 10,2,2,
 	 -1,I_WHORSE},
 	{"Trapping Lodge",
-	 ObjectType::DISABLED | ObjectType::CANENTER,
+	 ObjectType::DISABLED | ObjectType::CANENTER | ObjectType::CANMODIFY,
 	 0,0,0,0,
 	 I_IRONWOOD,10,S_HUNTING,5,
 	 10,2,2,
 	 -1,I_FLOATER},
 	{"Faerie Ring",
-	 ObjectType::DISABLED | ObjectType::CANENTER,
+	 ObjectType::DISABLED | ObjectType::CANENTER | ObjectType::CANMODIFY,
 	 0,0,0,0,
 	 I_MUSHROOM,10,S_HERBLORE,3,
 	 10,2,2,
 	 -1,I_MUSHROOM},
 	{"Alchemist Lab",
-	 ObjectType::DISABLED | ObjectType::CANENTER,
+	 ObjectType::DISABLED | ObjectType::CANENTER | ObjectType::CANMODIFY,
 	 0,0,0,0,
 	 I_ADMANTIUM,10,S_MINING,5,
 	 10,2,2,
 	 -1,I_ADMANTIUM},
 	{"Oasis",
-	 ObjectType::DISABLED | ObjectType::CANENTER,
+	 ObjectType::DISABLED | ObjectType::CANENTER | ObjectType::CANMODIFY,
 	 0,0,0,0,
 	 I_YEW,10,S_CAMELTRAINING,3,
 	 10,2,2,
 	 -1,I_CAMEL},
 	{"Gem Appraiser",
-	 ObjectType::DISABLED | ObjectType::CANENTER,
+	 ObjectType::DISABLED | ObjectType::CANENTER | ObjectType::CANMODIFY,
 	 0,0,0,0,
 	 I_WOOD_OR_STONE,10,S_MINING,3,
 	 10,2,2,
 	 -1,I_ROUGHGEM},
 	{"Hexagonal Portal Tower",
-	 ObjectType::DISABLED | ObjectType::CANENTER,
+	 ObjectType::DISABLED | ObjectType::CANENTER | ObjectType::CANMODIFY,
 	 7,0,0,1,
 	 I_IRONWOOD,25,-1,0,
 	 25,2,3,
